--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "tep",
     "version": "1.0.0",
-    
     "description": "¡Bienvenido al repositorio de la materia de Temas Especiales de Programación 2 del Grupo 2007! 🌟",
     "main": "index.js",
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "start": "node Tarea 5/T5.js"
     },
     "keywords": [],
     "author": "",
